fixed discord link (maybe)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/FWEh7xd7Z"
+            href="https://discord.gg/MEWJtSJThu"
             target="_blank"
             rel="noopener noreferrer"
           >
