--- a/frontend/index.html
+++ b/frontend/index.html
@@ -179,28 +179,28 @@
             <img src="images/slider/og.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/1.png" />
+            <img src="images/slider/og.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/2.png" />
+            <img src="images/slider/og.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/3.png" />
+            <img src="images/slider/og.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/4.png" />
+            <img src="images/slider/og.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/5.png" />
+            <img src="images/slider/og.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/6.png" />
+            <img src="images/slider/og.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/7.png" />
+            <img src="images/slider/og.png" />
           </li>
           <li class="splide__slide">
-            <img src="images/slider/8.png" />
+            <img src="images/slider/og.png" />
           </li>
         </ul>
       </div>
