--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="andriod-chrome-512x512.png" alt="logo" />
+            <img src="favicon-32x32.png" alt="logo" />
           </a>
         </div>
         <div class="menu">
