--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="favicon-32x32.png" alt="logo" />
+            <img src="images/header/PO.webp" alt="logo" />
           </a>
         </div>
         <div class="menu">
@@ -158,10 +158,10 @@
         <a id="mintedTxnBtn" href="" target="_blank" rel="noopener noreferrer">
           <button class="hero-btn btn">View Transaction</button>
         </a>
-        <p>View it in the collection:</p>
+        
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/plumpoala"
+          href="https://testnets.opensea.io/collection/teststackr-collection"
           target="_blank"
           rel="noopener noreferrer"
         >
