--- a/frontend/index copy.html
+++ b/frontend/index copy.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/header/PO.webp" alt="logo" />
+            <img src="favicon-32x32.png" alt="logo" />
           </a>
         </div>
         <div class="menu">
@@ -158,7 +158,7 @@
         <a id="mintedTxnBtn" href="" target="_blank" rel="noopener noreferrer">
           <button class="hero-btn btn">View Transaction</button>
         </a>
-        
+        <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
           href="https://testnets.opensea.io/collection/teststackr-collection"
@@ -169,7 +169,6 @@
         </a>
       </div>
     </section>
-  <p> What are Plumpoalas? </p>
 
     <div id="spinner" class="dot-spin"></div>
 
