--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/header/PO.webp" alt="logo" />
+            <img src="images/header/PO.jpg" alt="logo" />
           </a>
         </div>
         <div class="menu">
