--- a/frontend/index.html
+++ b/frontend/index.html
@@ -169,7 +169,7 @@
         </a>
       </div>
     </section>
-
+    <img src="images/slider/og.png" alt="test">
     <section class="container">
       <div>
        <p>What are Plumpoalas?</p>
