--- a/frontend/index.html
+++ b/frontend/index.html
@@ -170,8 +170,8 @@
       </div>
     </section>
 
-
-    <!-- <img src="images/slider/og.png" alt="test">
+<!-- 
+    <img src="images/slider/og.png" alt="test"> -->
     <section class="container">
       <div>
        <p>What are Plumpoalas?</p>
@@ -180,7 +180,7 @@
        <p>I’ll be honest, koalas kinda bugged me out when I was younger, but seeing them now, I think they’re pretty damn awesome. I also like to see myself as a bit of a thinker, and koalas represent to me the Child in Nietzsche’s Three Metamorphoses. You’re welcome to check that out btw. But if not, here’s a quick overview. So, Nietzsche(he’s a German philosopher btw) had this idea for how humans can grow, psychologically speaking. Essentially, there are three steps(thus the Three Metamorphoses), but I’m gonna skip to the final step, the Child. The Child doesn’t seek approval from society. Put plainly, the Child just doesn’t give a shit. It has the innocence of continual creation. But what the hell does that mean? Well, when people mature, they get too serious and get wrapped up in too many temporary things. Unleash your inner plumpoala! Let go! Bring out some of your childlike innocence and know the joy of a creative existence! Ok, now I know I sound pretty damn old. But y’all get the point. Btw, a pretty big inspiration was Mike Posner. He’s a musician, and I recommend checking him out. I think you’ll understand my point better if you do.</p>
        <p>I finished the art for this collection in one sitting. I wasn’t tryna be smart. Not tryna be inventive. Just doin whatever flew. The property names, the layer ideas were all spontaneous. So, I feel that they’re an accurate representation of my intention for this project. Of what I wanted to share with you all.</p>
       </div>
-    </section> -->
+    </section>
 
     <div id="spinner" class="dot-spin"></div>
 
