--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,8 +28,13 @@
     <link rel="stylesheet" href="css/three-dots.min.css" />
     <link rel="stylesheet" href="css/splide.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/themes/splide-default.min.css" />
+    <link rel="stylesheet" href="css/themes/splide-sea-green.min.css" />
+    <link rel="stylesheet" href="css/themes/splide-skyblue.min.css" />
+    <link rel="stylesheet" href="css/splide-core.min.css" /> -->
   </head>
   <body>
+
     <header>
       <div class="container">
         <div class="logo">
@@ -65,6 +70,7 @@
         </div>
       </div>
     </header>
+    <main>
 
     <section class="container not-connected">
       <div>
@@ -181,7 +187,7 @@
        <p>I finished the art for this collection in one sitting. I wasn’t tryna be smart. Not tryna be inventive. Just doin whatever flew. The property names, the layer ideas were all spontaneous. So, I feel that they’re an accurate representation of my intention for this project. Of what I wanted to share with you all.</p>
       </div>
     </section>
-
+  </main>
     <div id="spinner" class="dot-spin"></div>
 
     <div class="splide">
@@ -214,6 +220,7 @@
           <li class="splide__slide">
             <img src="images/slider/og.png" />
           </li>
+  
         </ul>
       </div>
     </div>
