--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
   <body>
 
     <header>
-      <div class="container">
+      <div class="top-bar">
         <div class="logo">
           <a href="/">
             <img src="images/header/PO.jpg" alt="logo" style="width:30px;height:30px;" />
