changed opensea linkk to testnety

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/plumpoala"
+            href="https://testnets.opensea.io/collection/plumpoala"
             target="_blank"
             rel="noopener noreferrer"
           >
