--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,9 @@
     <link rel="stylesheet" href="css/three-dots.min.css" />
     <link rel="stylesheet" href="css/splide.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/themes/splide-default.min.css" />
     <link rel="stylesheet" href="css/themes/splide-sea-green.min.css" />
     <link rel="stylesheet" href="css/themes/splide-skyblue.min.css" />
@@ -178,9 +181,9 @@
 
 <!-- 
     <img src="images/slider/og.png" alt="test"> -->
-    <section class="container">
+    <section class="container new_container">
       <div>
-       <p>What are Plumpoalas?</p>
+       <h1>What are Plumpoalas?</h1>
        <p>Plumpoalas. Plump koalas. Plumpness and koalas. Our two favorite things merged in one. That’s it! And we hope that’s something you love too!</p>
        <p>But who am I? I’m a kid born and raised in Australia. Not sayin how old, but just know on the younger side. I know, you’re all probably imagining some forty year old dude crafting this persona for the collection, but trust me on this one, I ain’t got no reason to lie.</p>
        <p>I’ll be honest, koalas kinda bugged me out when I was younger, but seeing them now, I think they’re pretty damn awesome. I also like to see myself as a bit of a thinker, and koalas represent to me the Child in Nietzsche’s Three Metamorphoses. You’re welcome to check that out btw. But if not, here’s a quick overview. So, Nietzsche(he’s a German philosopher btw) had this idea for how humans can grow, psychologically speaking. Essentially, there are three steps(thus the Three Metamorphoses), but I’m gonna skip to the final step, the Child. The Child doesn’t seek approval from society. Put plainly, the Child just doesn’t give a shit. It has the innocence of continual creation. But what the hell does that mean? Well, when people mature, they get too serious and get wrapped up in too many temporary things. Unleash your inner plumpoala! Let go! Bring out some of your childlike innocence and know the joy of a creative existence! Ok, now I know I sound pretty damn old. But y’all get the point. Btw, a pretty big inspiration was Mike Posner. He’s a musician, and I recommend checking him out. I think you’ll understand my point better if you do.</p>
