comments for future work

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
       <div class="top-bar">
         <div class="logo">
           <a href="/">
-            <img src="images/header/PO.jpg" alt="logo" style="width:30px;height:30px;" />
+            <img id = "logo" src="images/header/PO.jpg" alt="logo" style="width:30px;height:30px;" />
           </a>
         </div>
         <div class="menu">
